url view coursecard

--- a/templates/coursecard_footer.mustache
+++ b/templates/coursecard_footer.mustache
@@ -10,6 +10,6 @@
         </button>
     </div>
     <div class="user-role">
-        <a href="{{ viewurl }}" class="btn btn-secondary aula">{{# str }} view_course, theme_cbe {{/ str }}</a>
+        <a href="{{ view_url }}" class="btn btn-secondary aula">{{# str }} view_course, theme_cbe {{/ str }}</a>
     </div>
 </footer>
