styles video & audio

--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -6,6 +6,8 @@
 @import "base/form";
 
 @import "components/coursecard";
+@import "components/modtresipuntvideo";
+@import "components/modtresipuntaudio";
 
 @import "layout/navbar";
 @import "layout/footer";
