--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -239,10 +239,10 @@ body[data-theme='cbe'][data-role='user'] {
     &.url .mod .icon  {
       background-image: url('[[pix:theme|icon/url]]');
     }
-    &.audio .mod .icon  {
+    &.tresipuntaudio .mod .icon  {
       background-image: url('[[pix:theme|icon/audio]]');
     }
-    &.video .mod .icon  {
+    &.tresipuntvideo .mod .icon  {
       background-image: url('[[pix:theme|icon/video]]');
     }
     &.feedback .mod .icon  {
