--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -5,6 +5,7 @@
 @import "base/reset";
 @import "base/form";
 
+@import "components/modal";
 @import "components/coursecard";
 @import "components/modtresipuntvideo";
 @import "components/modtresipuntaudio";
