--- a/templates/course_left_section_menu_component.mustache
+++ b/templates/course_left_section_menu_component.mustache
@@ -9,6 +9,12 @@
         </a>
     </li>
     <li class="link">
+        <a href="{{ links.vclasses }}">
+            <i class="fa fa-video-camera" aria-hidden="true"></i>
+            <span class="text">{{# str }} course_menu_virtuals, theme_cbe {{/ str }}</span>
+        </a>
+    </li>
+    <li class="link">
         <a href="{{ links.grades }}">
             <i class="fa fa-pencil" aria-hidden="true"></i>
             <span class="text">{{# str }} course_left_grades, theme_cbe {{/ str }}</span>
