--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -119,6 +119,10 @@ body[data-theme='cbe'] {
         margin-right: 0 !important;
       }
     }
+    .count-container {
+      padding: 3px 6px;
+      border-radius: 6px;
+    }
   }
 
   div#nav-drawer {
