--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -290,7 +290,7 @@ body[data-theme='cbe'][data-role='user'] {
             .bocata {
               background-color: #E8E8E8;
               border-radius: 0 10px 10px 10px;
-              padding: 10px 20px 10px 10px;
+              padding: 10px 20px 0 10px;
               margin-right: 180px;
               position: relative;
               .fullname {
