--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -4,6 +4,7 @@
 
 @import "base/reset";
 @import "base/form";
+@import "base/icons";
 
 @import "components/modal";
 @import "components/coursecard";
