--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -46,34 +46,31 @@ body[data-theme='cbe'][data-role="user"] {
                   background-repeat: no-repeat;
                   background-position: 50%;
                   &.forum {
-                    background-image: url('[[pix:theme|icon/forum]]');
+                    background-image: url('[[pix:mod_forum|icon]]');
                   }
                   &.assign  {
-                    background-image: url('[[pix:theme|icon/assign]]');
+                    background-image: url('[[pix:mod_assign|icon]]');
                   }
                   &.resource {
-                    background-image: url('[[pix:theme|icon/resource]]');
+                    background-image: url('[[pix:mod_resource|icon]]');
                   }
                   &.quiz {
-                    background-image: url('[[pix:theme|icon/quiz]]');
+                    background-image: url('[[pix:mod_quiz|icon]]');
                   }
                   &.url {
-                    background-image: url('[[pix:theme|icon/url]]');
+                    background-image: url('[[pix:mod_url|icon]]');
                   }
                   &.tresipuntaudio {
-                    background-image: url('[[pix:theme|icon/audio]]');
+                    background-image: url('[[pix:mod_tresipuntaudio|icon]]');
                   }
                   &.tresipuntvideo {
-                    background-image: url('[[pix:theme|icon/video]]');
+                    background-image: url('[[pix:mod_tresipuntvideo|icon]]');
                   }
                   &.feedback {
-                    background-image: url('[[pix:theme|icon/feedback]]');
-                  }
-                  &.label {
-                    background-image: url('[[pix:theme|icon/publication]]');
+                    background-image: url('[[pix:mod_feedback|icon]]');
                   }
                   &.bigbluebuttonbn {
-                    background-image: url('[[pix:theme|icon/bigbluebuttonbn]]');
+                    background-image: url('[[pix:mod_bigbluebuttonbn|icon]]');
                   }
                 }
                 .text {
