--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -230,31 +230,31 @@ body[data-theme='cbe'][data-role='user'] {
       }
     }
     &.forum .mod .icon {
-      background-image: url('[[pix:theme|icon/forum]]');
+      background-image: url('[[pix:mod_forum|icon]]');
     }
     &.assign .mod .icon  {
-      background-image: url('[[pix:theme|icon/assign]]');
+      background-image: url('[[pix:mod_assign|icon]]');
     }
     &.resource .mod .icon  {
-      background-image: url('[[pix:theme|icon/resource]]');
+      background-image: url('[[pix:mod_resource|icon]]');
     }
     &.quiz .mod .icon  {
-      background-image: url('[[pix:theme|icon/quiz]]');
+      background-image: url('[[pix:mod_quiz|icon]]');
     }
     &.url .mod .icon  {
-      background-image: url('[[pix:theme|icon/url]]');
+      background-image: url('[[pix:mod_url|icon]]');
     }
     &.tresipuntaudio .mod .icon  {
-      background-image: url('[[pix:theme|icon/audio]]');
+      background-image: url('[[pix:mod_tresipuntaudio|icon]]');
     }
     &.tresipuntvideo .mod .icon  {
-      background-image: url('[[pix:theme|icon/video]]');
+      background-image: url('[[pix:mod_tresipuntvideo|icon]]');
     }
     &.feedback .mod .icon  {
-      background-image: url('[[pix:theme|icon/feedback]]');
+      background-image: url('[[pix:mod_feedback|icon]]');
     }
     &.bigbluebuttonbn .mod .icon  {
-      background-image: url('[[pix:theme|icon/bigbluebuttonbn]]');
+      background-image: url('[[pix:mod_bigbluebuttonbn|icon]]');
     }
     .to_comment {
       bottom: -60px;
