--- a/scss/pages/_moreinfo.scss
+++ b/scss/pages/_moreinfo.scss
@@ -4,7 +4,7 @@ body[data-theme='cbe'][data-role='user'] {
 
     header.moreinfo-header {
       background-color: #fff;
-      padding: 22px;
+      padding: 22px 22px 14px;
       border: 1px solid $border-color;
       box-shadow: $shadow-color 0 3px 6px;
       border-radius: 0;
