--- a/scss/pages/_tasks.scss
+++ b/scss/pages/_tasks.scss
@@ -4,7 +4,7 @@ body[data-theme='cbe'][data-role='user'] {
 
     header.moreinfo-header {
       background-color: #fff;
-      padding: 22px;
+      padding: 22px 22px 14px;
       border: 1px solid $border-color;
       box-shadow: $shadow-color 0 3px 6px;
       border-radius: 0;
@@ -26,6 +26,100 @@ body[data-theme='cbe'][data-role='user'] {
       padding: 30px;
       border: 1px solid $border-color;
       margin-top: 20px;
+      .filters {
+        width: 100%;
+        position: relative;
+        i.fa.fa-search {
+          position: absolute;
+          top: 8px;
+          right: 11px;
+          font-size: 20px;
+          color: #d9d9d9;
+        }
+      }
+      .resettable a {
+        background-color: white;
+        border: 1px solid $primary-color;
+        padding: 4px 10px;
+        display: inline-flex;
+        margin-bottom: 10px;
+        &:hover {
+          text-decoration: none;
+          background-color: $primary-color;
+          color: white;
+        }
+      }
+      table.generaltable {
+        th {
+          position: relative;
+          a {
+            color: $black-ligth;
+            &:hover {
+              color: $primary-color !important;
+              text-decoration: none;
+            }
+          }
+          >i.icon {
+            color: $primary-color;
+            position: relative;
+            top: 9px;
+            left: 4px;
+            font-size: 24px;
+            &.fa-sort-desc {
+              top: 0;
+            }
+          }
+          .commands {
+            position: absolute;
+            top: 18px;
+            right: 11px;
+            >a {
+              color: #ccc;
+              border: 1px solid #ccc;
+              padding: 2px 2px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-radius: 20px;
+              &:hover {
+                border: 1px solid $primary-color;
+              }
+              >i.icon {
+                margin: 0;
+                font-size: 12px;
+                width: 12px;
+                height: 12px;
+              }
+            }
+          }
+        }
+        td {
+          color: $black-ligth;
+          vertical-align: middle;
+          .module-component {
+            display: flex;
+            align-items: center;
+            img.icon {
+              background-color: $primary-color;
+              padding: 8px;
+            }
+            .data {
+              >a.title {
+                color: $black-ligth;
+                &:hover {
+                  color: $primary-color !important;
+                  text-decoration: none;
+                }
+              }
+              >p.section {
+                font-size: 14px;
+                color: $grey-medium;
+                margin: 0;
+              }
+            }
+          }
+        }
+      }
     }
 
   }
