--- a/templates/navbar.mustache
+++ b/templates/navbar.mustache
@@ -85,33 +85,9 @@
                     </svg>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" >
-                    {{# is_teacher }}
-                    <ul id="app-admin">
-                        <li class="app roles">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon roles">
-                                    <i class="fa fa-user-secret" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_roles, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app evaluation">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-bar-chart" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_evaluation, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                    {{/ is_teacher }}
                     <ul id="app-apps" class="apps">
                         <li class="app cloud">
-                            <a href="https://nextcloud.pilotescola.digital" class="app-link" target="_blank">
+                            <a href="https://nextcloud.escola3.digitaldemocratic.net/" class="app-link" target="_blank">
                                 <div class="icon">
                                     <i class="fa fa-cloud" aria-hidden="true"></i>
                                 </div>
@@ -121,12 +97,144 @@
                             </a>
                         </li>
                         <li class="app email">
-                            <a href="#" class="app-link" target="_blank">
+                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/mail/setup" class="app-link" target="_blank">
                                 <div class="icon">
                                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
                                 </div>
                                 <div class="text">
                                     {{# str }} app_menu_email, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app pad">
+                            <a href="https://pad.escola3.digitaldemocratic.net/" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_pads, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app create-files">
+                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/files" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-file-word-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_create_file, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app forms">
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-check-square-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_form_forms, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app feedbacks">
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_form_feedback, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app chats">
+                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/spreed" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-commenting-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_chat, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app meet-bbb">
+                            <a href="https://bbb.digitaldemocratic.net/" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-video-camera" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_meets_bbb, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app blogs">
+                            <a href="https://wp.escola3.digitaldemocratic.net/" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-rss" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_blogs, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app schedule">
+                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/calendar" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_schedule, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app photos">
+                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/photos" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-file-image-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_photos, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app maps">
+                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/maps" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_maps, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul id="app-external" class="external-links">
+                        <li class="app youtube">
+                            <a href="https://youtube.com/" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_youtube, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app dict">
+                            <a href="https://www.wordreference.com/" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-book" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_dict, theme_cbe {{/ str }}
+                                </div>
+                            </a>
+                        </li>
+                        <li class="app meet-jitsi">
+                            <a href="http://meet.jit.si/" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-video-camera" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_meets_jitsi, theme_cbe {{/ str }}
                                 </div>
                             </a>
                         </li>
@@ -137,158 +245,6 @@
                                 </div>
                                 <div class="text">
                                     {{# str }} app_menu_search, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app pad">
-                            <a href="https://pad.pilotescola.digital" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-file-text-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_pads, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app create-files">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-file-word-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_create_file, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app form-feedback">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-check-square-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_form_feedback, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app chats">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-commenting-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_chat, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app meet-jitsi">
-                            <a href="https://jitsi.pilotescola.digital" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-video-camera" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_meets_jitsi, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app meet-bbb">
-                            <a href="" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-video-camera" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_meets_bbb, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app blogs">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-rss" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_blogs, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app contacts">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-users" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_contacts, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app schedule">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_schedule, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app tasks">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-list-ol" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_tasks, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app evaluation">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_evaluation, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app photos">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-file-image-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_photos, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                    <ul id="app-external" class="external-links">
-                        <li class="app youtube">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_youtube, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app maps">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_maps, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app dict">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-book" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_dict, theme_cbe {{/ str }}
                                 </div>
                             </a>
                         </li>
